# opengl-game-engine

./: CMakeLists.txt  README.md  app.cpp
header/renderer/: glew.hpp  glfw.hpp  rendererManager.hpp  window.hpp
headers/: drawRect.hpp  glew.hpp  log.hpp  makeRect.hpp  opengl.hpp  renderer.hpp  shaders.hpp  vertex.hpp  vertexes.hpp  window.hpp
headers/imageRenderer/: draw.hpp  initOpengl.hpp  loadShaders.hpp  vertexBufferData.hpp
src/: drawRect.cpp  glew.cpp  log.cpp  makeRect.cpp  opengl.cpp  renderer.cpp  shaders.cpp  vertex.cpp  window.cpp
src/ImageRenderer/: draw.cpp  initOpengl.cpp  loadShaders.cpp
src/log/: log.cpp
src/renderer/: glew.cpp  glfw.cpp  rendererManager.cpp  window.cpp
